# practice-algorithm-rust

./: .gitignore  AGENTS.md  README.md
abc136/: Cargo.toml
abc307/testcases/: d.yml
abc315/: Cargo.toml
abc317/: Cargo.toml
abc318/: Cargo.toml
abc354/: Cargo.toml
abc360/: Cargo.toml
abc362/: Cargo.toml
abc363/: Cargo.toml
abc364/: Cargo.toml
abc422/: Cargo.toml
abc422/testcases/: a.yml  b.yml  c.yml  d.yml  e.yml
abc423/: Cargo.toml
abc423/testcases/: a.yml  b.yml  c.yml  d.yml  e.yml
abc425/: Cargo.toml
abc425/testcases/: a.yml  b.yml  c.yml  d.yml  e.yml
abc426/: Cargo.toml
abc426/testcases/: a.yml  b.yml  c.yml  d.yml  e.yml
abc428/: Cargo.toml
abc428/testcases/: a.yml  b.yml  c.yml  d.yml  e.yml
abc429/: Cargo.toml
abc429/testcases/: a.yml  b.yml  c.yml  d.yml  (+1 more)
abc430/: Cargo.toml
abc431/: Cargo.toml
abc432/: Cargo.toml
abc433/: Cargo.toml
abc434/: Cargo.toml
abc435/: Cargo.toml
abc436/: Cargo.toml
abc437/: Cargo.toml
abc438/: Cargo.toml
abc440/: Cargo.toml
abc441/: Cargo.toml
abc442/: Cargo.toml
abc443/: Cargo.toml
abc444/: Cargo.toml
abc445/: Cargo.toml
abc447/: Cargo.toml
abc449/: Cargo.toml
abc450/: Cargo.toml
abc451/: Cargo.toml
abc452/: Cargo.toml
abc453/: Cargo.toml
abc454/: Cargo.toml
adt_all_20231214_1/: Cargo.toml
adt_all_20240314_1/: Cargo.toml
adt_all_20240508_3/: Cargo.toml
adt_all_20240529_3/: Cargo.toml
adt_all_20240801_3/: Cargo.toml
adt_all_20240912_1/: Cargo.toml
adt_all_20241010_2/: Cargo.toml
adt_all_20241121_1/: Cargo.toml
adt_all_20241205_2/: Cargo.toml
adt_all_20241212_3/: Cargo.toml
adt_all_20241218_2/: Cargo.toml
adt_all_20241225_1/: Cargo.toml
adt_all_20241226_2/: Cargo.toml
adt_all_20250102_2/: Cargo.toml
adt_all_20250107_1/: Cargo.toml
adt_all_20250108_3/: Cargo.toml
adt_all_20250109_1/: Cargo.toml
adt_all_20250109_2/: Cargo.toml
adt_all_20250109_3/: Cargo.toml
adt_all_20250116_1/: Cargo.toml
adt_all_20250116_3/: Cargo.toml
adt_all_20250129_3/: Cargo.toml
adt_all_20250206_2/: Cargo.toml
adt_all_20250219_3/: Cargo.toml
adt_all_20250220_2/: Cargo.toml
adt_all_20250226_3/: Cargo.toml
adt_all_20250227_1/: Cargo.toml
adt_all_20250305_3/: Cargo.toml
adt_all_20250313_3/: Cargo.toml
adt_all_20250319_3/: Cargo.toml
adt_all_20250326_3/: Cargo.toml
adt_all_20250402_3/: Cargo.toml
adt_all_20250410_2/: Cargo.toml
adt_all_20250507_3/: Cargo.toml
adt_all_20250515_3/: Cargo.toml
adt_all_20250521_3/: Cargo.toml
adt_all_20250625_3/: Cargo.toml
adt_all_20251016_3/: Cargo.toml
adt_all_20251113_2/: Cargo.toml
adt_easy_20251030_3/: Cargo.toml
adt_hard_20240702_2/: Cargo.toml
adt_hard_20240801_2/: Cargo.toml
adt_hard_20240822_1/: Cargo.toml
adt_hard_20240822_3/: Cargo.toml
adt_hard_20250624_1/: Cargo.toml
adt_hard_20250624_2/: Cargo.toml
adt_medium_20240201_2/: Cargo.toml
adt_medium_20240229_3/: Cargo.toml
adt_medium_20240305_3/: Cargo.toml
adt_medium_20240307_1/: Cargo.toml
adt_medium_20240307_2/: Cargo.toml
adt_medium_20240307_3/: Cargo.toml
adt_medium_20240313_1/: Cargo.toml
adt_medium_20240314_2/: Cargo.toml
adt_medium_20240314_3/: Cargo.toml
adt_medium_20240321_2/: Cargo.toml
adt_medium_20240321_3/: Cargo.toml
adt_medium_20240326_2/: Cargo.toml
adt_medium_20240402_2/: Cargo.toml
adt_medium_20240411_2/: Cargo.toml
adt_medium_20240411_3/: Cargo.toml
adt_medium_20240424_2/: Cargo.toml
adt_medium_20240425_3/: Cargo.toml
adt_medium_20240509_3/: Cargo.toml
adt_medium_20241211_1/: Cargo.toml
adt_medium_20250619_2/: Cargo.toml
adt_medium_20250625_2/: Cargo.toml
adt_medium_20250925_1/: Cargo.toml
adt_medium_20250925_3/: Cargo.toml
adt_medium_20251008_1/: Cargo.toml
adt_medium_20251030_2/: Cargo.toml
adt_medium_20251104_1/: Cargo.toml
adt_medium_20251105_2/: Cargo.toml
adt_medium_20251106_1/: Cargo.toml
awc0003/: Cargo.toml
docs/: README.md
kenchon/: Cargo.toml
kenchon/testcases/: abc032_c.yml  abc038_c.yml  abc089_d.yml  abc105_d.yml  abc130_d.yml  abc149_d.yml  abc158_e.yml  abc164_d.yml  abc185_f.yml  abc186_f.yml  abc221_e.yml  abc223_f.yml  abc229_d.yml  abc231_f.yml  abc247_e.yml  abc254_f.yml  abc260_e.yml  abc288_d.yml  abc326_c.yml  abc339_e.yml  abc341_e.yml  abc351_f.yml  abc367_d.yml  abc368_g.yml  abc378_e.yml  abc381_d.yml  abc385_c.yml  abc389_f.yml  abc403_d.yml  abc408_f.yml  abc415_f.yml  abc429_f.yml  abc432_e.yml  abc436_f.yml  abc437_f.yml  abc441_e.yml  abc444_e.yml  abl_d.yml  arc022_2.yml  arc098_b.yml  (+105 more)
problems/: Cargo.toml
problems/testcases/: abc080_c.yml  abc082_b.yml  abc103_c.yml  abc112_d.yml  abc117_d.yml  abc127_d.yml  abc127_f.yml  abc128_c.yml  abc129_c.yml  abc130_d.yml  abc132_d.yml  abc133_d.yml  abc134_d.yml  abc136_d.yml  abc138_d.yml  abc140_d.yml  abc141_d.yml  abc142_d.yml  abc145_d.yml  abc146_c.yml  abc147_c.yml  abc148_e.yml  abc151_d.yml  abc152_d.yml  abc153_e.yml  abc154_d.yml  abc156_d.yml  abc157_c.yml  abc160_d.yml  abc160_e.yml  abc161_d.yml  abc162_d.yml  abc163_d.yml  abc165_c.yml  abc166_e.yml  abc167_d.yml  abc168_d.yml  abc169_d.yml  abc170_d.yml  abc171_d.yml  (+197 more)
trainings_abc_d_e/: Cargo.toml
trainings_abc_d_e/testcases/: abc133_d.yml  abc212_d.yml  abc213_d.yml  abc214_d.yml  abc215_d.yml  abc216_d.yml  abc218_d.yml  abc219_d.yml  abc220_d.yml  abc224_d.yml  abc226_d.yml  abc226_e.yml  abc227_d.yml  abc228_d.yml  abc229_d.yml  abc230_d.yml  abc232_d.yml  abc232_e.yml  abc233_d.yml  abc234_d.yml  abc235_e.yml  abc237_d.yml  abc237_e.yml  abc238_d.yml  abc239_d.yml  abc240_d.yml  abc241_d.yml  abc242_d.yml  abc242_e.yml  abc243_d.yml  abc244_d.yml  abc245_d.yml  abc246_d.yml  abc247_d.yml  abc247_e.yml  abc248_e.yml  abc252_e.yml  abc254_e.yml  abc256_e.yml  abc257_d.yml  (+79 more)
typical90/: Cargo.toml
typical90_2025/: Cargo.toml
yukicoder/: Cargo.toml
yukicoder/testcases/: 2919.yml  2920.yml  2921.yml  2922.yml  2923.yml  2927.yml  2930.yml  3010.yml  3012.yml  3013.yml  3014.yml  3016.yml  3017.yml  3259.yml  3260.yml  3261.yml  3262.yml  3263.yml  3264.yml  3265.yml  3266.yml
(+455 files in other folders)
