[package]
name = "kenchon"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
joi2008yo-e = { alias = "joi2008yo_e", problem = "https://atcoder.jp/contests/joi2008yo/tasks/joi2008yo_e" }
joi2008ho-c = { alias = "joi2008ho_c", problem = "https://atcoder.jp/contests/joi2008ho/tasks/joi2008ho_c"}
joigsp2025-e = { alias = "joigsp2025_e", problem = "https://atcoder.jp/contests/joigsp2025/tasks/joigsp2025_e"}
joi2025ho-a = { alias = "joi2025ho_a", problem = "https://atcoder.jp/contests/joi2025ho/tasks/joi2025ho_a"}
joig2025-c = { alias = "joig2025_c", problem = "https://atcoder.jp/contests/joig2025-open/tasks/joig2025_c"}
joig2025-b = { alias = "joig2025_b", problem = "https://atcoder.jp/contests/joig2025-open/tasks/joig2025_b"}
joi2025-yo2-b = { alias = "joi2025_yo2_b", problem = "https://atcoder.jp/contests/joi2025yo2/tasks/joi2025_yo2_b"}
joigsp2024-a = { alias = "joigsp2024_a", problem = "https://atcoder.jp/contests/joigsp2024/tasks/joigsp2024_a"}
joi2024ho-a = { alias = "joi2024ho_a", problem = "https://atcoder.jp/contests/joi2024ho/tasks/joi2024ho_a"}
joig2024-d = { alias = "joig2024_d", problem = "https://atcoder.jp/contests/joig2024-open/tasks/joig2024_d"}
joig2024-c = { alias = "joig2024_c", problem = "https://atcoder.jp/contests/joig2024-open/tasks/joig2024_c"}
joi2024-yo2-b = { alias = "joi2024_yo2_b", problem = "https://atcoder.jp/contests/joi2024yo2/tasks/joi2024_yo2_b"}
joi2023ho-a = { alias = "joi2023ho_a", problem = "https://atcoder.jp/contests/joi2023ho/tasks/joi2023ho_a"}
joig2023-d = { alias = "joig2023_d", problem = "https://atcoder.jp/contests/joig2023-open/tasks/joig2023_d"}
joigsc2022-a = { alias = "joigsc2022_a", problem = "https://atcoder.jp/contests/joigsc2022/tasks/joigsc2022_a"}
joig2021-d = { alias = "joig2021_d", problem = "https://atcoder.jp/contests/joig2021-open/tasks/joig2021_d"}
joi2020ho-b = { alias = "joi2020ho_b", problem = "https://atcoder.jp/contests/joi2020ho/tasks/joi2020ho_b"}
joi2020ho-a = { alias = "joi2020ho_a", problem = "https://atcoder.jp/contests/joi2020ho/tasks/joi2020ho_a"}
joi2019-yo-d = { alias = "joi2019_yo_d", problem = "https://atcoder.jp/contests/joi2019yo/tasks/joi2019_yo_d"}
joi2017ho-a = { alias = "joi2017ho_a", problem = "https://atcoder.jp/contests/joi2017ho/tasks/joi2017ho_a"}
joi2016ho-b = { alias = "joi2016ho_b", problem = "https://atcoder.jp/contests/joi2016ho/tasks/joi2016ho_b"}
joi2016ho-a = { alias = "joi2016ho_a", problem = "https://atcoder.jp/contests/joi2016ho/tasks/joi2016ho_a"}
joi2016yo-d = { alias = "joi2016yo_d", problem = "https://atcoder.jp/contests/joi2016yo/tasks/joi2016yo_d"}
joisc2014-h = { alias = "joisc2014_h", problem = "https://atcoder.jp/contests/joisc2014/tasks/joisc2014_h"}

[[bin]]
name = "joi2008yo-e"
path = "src/bin/joi2008yo_e.rs"

[[bin]]
name = "joi2008ho-c"
path = "src/bin/joi2008ho_c.rs"

[[bin]]
name = "joigsp2025-e"
path = "src/bin/joigsp2025_e.rs"

[[bin]]
name = "joi2025ho-a"
path = "src/bin/joi2025ho_a.rs"

[[bin]]
name = "joig2025-c"
path = "src/bin/joig2025_c.rs"

[[bin]]
name = "joig2025-b"
path = "src/bin/joig2025_b.rs"

[[bin]]
name = "joi2025-yo2-b"
path = "src/bin/joi2025_yo2_b.rs"

[[bin]]
name = "joigsp2024-a"
path = "src/bin/joigsp2024_a.rs"

[[bin]]
name = "joi2024ho-a"
path = "src/bin/joi2024ho_a.rs"

[[bin]]
name = "joig2024-d"
path = "src/bin/joig2024_d.rs"

[[bin]]
name = "joig2024-c"
path = "src/bin/joig2024_c.rs"

[[bin]]
name = "joi2024-yo2-b"
path = "src/bin/joi2024_yo2_b.rs"

[[bin]]
name = "joi2023ho-a"
path = "src/bin/joi2023ho_a.rs"

[[bin]]
name = "joig2023-d"
path = "src/bin/joig2023_d.rs"

[[bin]]
name = "joigsc2022-a"
path = "src/bin/joigsc2022_a.rs"

[[bin]]
name = "joig2021-d"
path = "src/bin/joig2021_d.rs"

[[bin]]
name = "joi2020ho-b"
path = "src/bin/joi2020ho_b.rs"

[[bin]]
name = "joi2020ho-a"
path = "src/bin/joi2020ho_a.rs"

[[bin]]
name = "joi2019-yo-d"
path = "src/bin/joi2019_yo_d.rs"

[[bin]]
name = "joi2017ho-a"
path = "src/bin/joi2017ho_a.rs"

[[bin]]
name = "joi2016ho-b"
path = "src/bin/joi2016ho_b.rs"

[[bin]]
name = "joi2016ho-a"
path = "src/bin/joi2016ho_a.rs"

[[bin]]
name = "joi2016yo-d"
path = "src/bin/joi2016yo_d.rs"

[[bin]]
name = "joisc2014-h"
path = "src/bin/joisc2014_h.rs"

[dependencies]
rpds = "=1.1.1"
rand_xorshift = "=0.4.0"
rand_xoshiro = "=0.7.0"
statrs = "=0.18.0"
primal = "=0.3.3"
thiserror = "=2.0.16"
ac-library-rs = "=0.2.0"
once_cell = "=1.21.3"
static_assertions = "=1.1.0"
varisat = "=0.2.2"
memoise = "=0.3.2"
argio = "=0.2.0"
bitvec = "=1.0.1"
counter = "=0.7.0"
hashbag = "=0.1.12"
pathfinding = "=4.14.0"
recur-fn = "=2.2.0"
indexing = { version = "=0.4.1", features = ["experimental_pointer_ranges"] }
amplify = { version = "=4.9.0", features = [
    "c_raw",
    "rand",
    "stringly_conversions",
] }
amplify_derive = "=4.0.1"
amplify_num = { version = "=0.5.3", features = ["std"] }
easy-ext = "=1.0.2"
multimap = "=0.10.1"
btreemultimap = "=0.1.1"
bstr = "=1.12.0"
az = "=1.2.1"
glidesort = "=0.1.2"
tap = "=1.0.1"
omniswap = "=0.1.0"
multiversion = "=0.8.0"
num = "=0.4.3"
num-bigint = "=0.4.6"
num-complex = "=0.4.6"
num-integer = "=0.1.46"
num-iter = "=0.1.45"
num-rational = "=0.4.2"
num-traits = "=0.2.19"
num-derive = "=0.4.2"
ndarray = "=0.16.1"
nalgebra = "=0.34.0"
alga = "=0.9.3"
libm = "=0.2.15"
rand = "=0.9.2"
getrandom = "=0.3.3"
rand_chacha = "=0.9.0"
rand_core = "=0.9.3"
rand_hc = "=0.4.0"
rand_pcg = "=0.9.0"
rand_distr = "=0.5.1"
petgraph = "=0.8.2"
indexmap = "=2.11.0"
regex = "=1.11.2"
lazy_static = "=1.5.0"
ordered-float = "=5.0.0"
ascii = "=1.1.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.14.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.15.0"
im-rc = "=15.1.0"
fixedbitset = "=0.5.7"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.5.0", features = ["derive"] }
text_io = "=0.1.13"
rustc-hash = "=2.1.1"
smallvec = { version = "=1.15.1", features = [
    "const_generics",
    "const_new",
    "write",
    "union",
    "serde",
    "arbitrary",
] }

[dev-dependencies]
