[package]
name = "kenchon"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
joi2008yo-e = { alias = "joi2008yo_e", problem = "https://atcoder.jp/contests/joi2008yo/tasks/joi2008yo_e" }
joi2008ho-c = { alias = "joi2008ho_c", problem = "https://atcoder.jp/contests/joi2008ho/tasks/joi2008ho_c"}
joigsp2025-e = { alias = "joigsp2025_e", problem = "https://atcoder.jp/contests/joigsp2025/tasks/joigsp2025_e"}
joi2025ho-a = { alias = "joi2025ho_a", problem = "https://atcoder.jp/contests/joi2025ho/tasks/joi2025ho_a"}
joig2025-c = { alias = "joig2025_c", problem = "https://atcoder.jp/contests/joig2025-open/tasks/joig2025_c"}
joig2025-b = { alias = "joig2025_b", problem = "https://atcoder.jp/contests/joig2025-open/tasks/joig2025_b"}
joi2025-yo2-b = { alias = "joi2025_yo2_b", problem = "https://atcoder.jp/contests/joi2025yo2/tasks/joi2025_yo2_b"}
joigsp2024-a = { alias = "joigsp2024_a", problem = "https://atcoder.jp/contests/joigsp2024/tasks/joigsp2024_a"}
joi2024ho-a = { alias = "joi2024ho_a", problem = "https://atcoder.jp/contests/joi2024ho/tasks/joi2024ho_a"}
joig2024-d = { alias = "joig2024_d", problem = "https://atcoder.jp/contests/joig2024-open/tasks/joig2024_d"}
joig2024-c = { alias = "joig2024_c", problem = "https://atcoder.jp/contests/joig2024-open/tasks/joig2024_c"}
joi2024-yo2-b = { alias = "joi2024_yo2_b", problem = "https://atcoder.jp/contests/joi2024yo2/tasks/joi2024_yo2_b"}
joi2023ho-a = { alias = "joi2023ho_a", problem = "https://atcoder.jp/contests/joi2023ho/tasks/joi2023ho_a"}
joig2023-d = { alias = "joig2023_d", problem = "https://atcoder.jp/contests/joig2023-open/tasks/joig2023_d"}
joigsc2022-a = { alias = "joigsc2022_a", problem = "https://atcoder.jp/contests/joigsc2022/tasks/joigsc2022_a"}
joig2021-d = { alias = "joig2021_d", problem = "https://atcoder.jp/contests/joig2021-open/tasks/joig2021_d"}
joi2020ho-b = { alias = "joi2020ho_b", problem = "https://atcoder.jp/contests/joi2020ho/tasks/joi2020ho_b"}
joi2020ho-a = { alias = "joi2020ho_a", problem = "https://atcoder.jp/contests/joi2020ho/tasks/joi2020ho_a"}
joi2019-yo-d = { alias = "joi2019_yo_d", problem = "https://atcoder.jp/contests/joi2019yo/tasks/joi2019_yo_d"}
joi2017ho-a = { alias = "joi2017ho_a", problem = "https://atcoder.jp/contests/joi2017ho/tasks/joi2017ho_a"}
joi2016ho-b = { alias = "joi2016ho_b", problem = "https://atcoder.jp/contests/joi2016ho/tasks/joi2016ho_b"}
joi2016ho-a = { alias = "joi2016ho_a", problem = "https://atcoder.jp/contests/joi2016ho/tasks/joi2016ho_a"}
joi2016yo-d = { alias = "joi2016yo_d", problem = "https://atcoder.jp/contests/joi2016yo/tasks/joi2016yo_d"}
joisc2014-h = { alias = "joisc2014_h", problem = "https://atcoder.jp/contests/joisc2014/tasks/joisc2014_h"}
joi2014ho2 = { problem = "https://atcoder.jp/contests/joi2014ho/tasks/joi2014ho2"}
joi2014yo-d = { alias = "joi2014yo_d", problem = "https://atcoder.jp/contests/joi2014yo/tasks/joi2014yo_d"}
joi2014ho1 = { problem = "https://atcoder.jp/contests/joi2014ho/tasks/joi2014ho1"}
joisc2007-anagra = { alias = "joisc2007_anagra", problem = "https://atcoder.jp/contests/joisc2007/tasks/joisc2007_anagra"}
joisc2008-nile = { alias = "joisc2008_nile", problem = "https://atcoder.jp/contests/joisc2008/tasks/joisc2008_nile"}
joisc2008-origami = { alias = "joisc2008_origami", problem = "https://atcoder.jp/contests/joisc2008/tasks/joisc2008_origami"}
joi2009yo-c = { alias = "joi2009yo_c", problem = "https://atcoder.jp/contests/joi2009yo/tasks/joi2009yo_c"}
joi2009ho-b = { alias = "joi2009ho_b", problem = "https://atcoder.jp/contests/joi2009ho/tasks/joi2009ho_b"}
joi2010yo-e = { alias = "joi2010yo_e", problem = "https://atcoder.jp/contests/joi2010yo/tasks/joi2010yo_e"}
joi2010ho-c = { alias = "joi2010ho_c", problem = "https://atcoder.jp/contests/joi2010ho/tasks/joi2010ho_c"}
joisc2010-stairs = { alias = "joisc2010_stairs", problem = "https://atcoder.jp/contests/joisc2010/tasks/joisc2010_stairs"}
joi2011ho2 = { problem = "https://atcoder.jp/contests/joi2011ho/tasks/joi2011ho2"}
joisc2011-banner = { alias = "joisc2011_banner", problem = "https://atcoder.jp/contests/joisc2011/tasks/joisc2011_banner"}
joisc2011-ioi = { alias = "joisc2011_ioi", problem = "https://atcoder.jp/contests/joisc2011/tasks/joisc2011_ioi"}
joi2012yo-e = { alias = "joi2012yo_e", problem = "https://atcoder.jp/contests/joi2012yo/tasks/joi2012yo_e"}
joi2012ho3 = { problem = "https://atcoder.jp/contests/joi2012ho/tasks/joi2012ho3"}
joi2013ho1 = { problem = "https://atcoder.jp/contests/joi2013ho/tasks/joi2013ho1"}
joisc2013-joi-poster = { alias = "joisc2013_joi_poster", problem = "https://atcoder.jp/contests/joisc2013-day1/tasks/joisc2013_joi_poster"}
joi2026-yo2-e = { alias = "joi2026_yo2_e", problem = "https://atcoder.jp/contests/joi2026yo2/tasks/joi2026_yo2_e"}
joi2026-yo2-d = { alias = "joi2026_yo2_d", problem = "https://atcoder.jp/contests/joi2026yo2/tasks/joi2026_yo2_d"}
joigsp2025-i = { alias = "joigsp2025_i", problem = "https://atcoder.jp/contests/joigsp2025/tasks/joigsp2025_i"}
joigsp2025-f = { alias = "joigsp2025_f", problem = "https://atcoder.jp/contests/joigsp2025/tasks/joigsp2025_f"}
joig2025-a = { alias = "joig2025_a", problem = "https://atcoder.jp/contests/joig2025-open/tasks/joig2025_a"}
abc385-c = { alias = "abc385_c", problem = "https://atcoder.jp/contests/abc385/tasks/abc385_c"}
abc149-d = { alias = "abc149_d", problem = "https://atcoder.jp/contests/abc149/tasks/abc149_d"}
abc105-d = { alias = "abc105_d", problem = "https://atcoder.jp/contests/abc105/tasks/abc105_d"}
abc367-d = { alias = "abc367_d", problem = "https://atcoder.jp/contests/abc367/tasks/abc367_d"}
joi2025ho-b = { alias = "joi2025ho_b", problem = "https://atcoder.jp/contests/joi2025ho/tasks/joi2025ho_b"}
abc403-d = { alias = "abc403_d", problem = "https://atcoder.jp/contests/abc403/tasks/abc403_d"}
abc164-d = { alias = "abc164_d", problem = "https://atcoder.jp/contests/abc164/tasks/abc164_d"}
abc089-d = { alias = "abc089_d", problem = "https://atcoder.jp/contests/abc089/tasks/abc089_d"}
abc419-e = { alias = "abc419_e", problem = "https://atcoder.jp/contests/abc419/tasks/abc419_e"}
abc378-e = { alias = "abc378_e", problem = "https://atcoder.jp/contests/abc378/tasks/abc378_e"}
abc158-e = { alias = "abc158_e", problem = "https://atcoder.jp/contests/abc158/tasks/abc158_e"}
abc288-d = { alias = "abc288_d", problem = "https://atcoder.jp/contests/abc288/tasks/abc288_d"}
joi2025-yo2-c = { alias = "joi2025_yo2_c", problem = "https://atcoder.jp/contests/joi2025yo2/tasks/joi2025_yo2_c"}
tessoku-book-bf = { alias = "tessoku_book_bf", problem = "https://atcoder.jp/contests/tessoku-book/tasks/tessoku_book_bf"}
tessoku-book-bg = { alias = "tessoku_book_bg", problem = "https://atcoder.jp/contests/tessoku-book/tasks/tessoku_book_bg"}
abc185-f = { alias = "abc185_f", problem = "https://atcoder.jp/contests/abc185/tasks/abc185_f"}
typical90-ak = { alias = "typical90_ak", problem = "https://atcoder.jp/contests/typical90/tasks/typical90_ak"}
tessoku-book-ee = { alias = "tessoku_book_ee", problem = "https://atcoder.jp/contests/tessoku-book/tasks/tessoku_book_ee"}
abc441-e = { alias = "abc441_e", problem = "https://atcoder.jp/contests/abc441/tasks/abc441_e"}
abc437-f = { alias = "abc437_f", problem = "https://atcoder.jp/contests/abc437/tasks/abc437_f"}
abc436-f = { alias = "abc436_f", problem = "https://atcoder.jp/contests/abc436/tasks/abc436_f"}
abc432-e = { alias = "abc432_e", problem = "https://atcoder.jp/contests/abc432/tasks/abc432_e"}
abc339-e = { alias = "abc339_e", problem = "https://atcoder.jp/contests/abc339/tasks/abc339_e"}
abc351-f = { alias = "abc351_f", problem = "https://atcoder.jp/contests/abc351/tasks/abc351_f"}
abc343-f = { alias = "abc343_f", problem = "https://atcoder.jp/contests/abc343/tasks/abc343_f"}
abc341-e = { alias = "abc341_e", problem = "https://atcoder.jp/contests/abc341/tasks/abc341_e"}
abc231-f = { alias = "abc231_f", problem = "https://atcoder.jp/contests/abc231/tasks/abc231_f"}
abc221-e = { alias = "abc221_e", problem = "https://atcoder.jp/contests/abc221/tasks/abc221_e"}
tessoku-book-ef = { alias = "tessoku_book_ef", problem = "https://atcoder.jp/contests/tessoku-book/tasks/tessoku_book_ef"}
abl-d = { alias = "abl_d", problem = "https://atcoder.jp/contests/abl/tasks/abl_d"}
practice2-j = { alias = "practice2_j", problem = "https://atcoder.jp/contests/practice2/tasks/practice2_j"}
joigsp2024-e = { alias = "joigsp2024_e", problem = "https://atcoder.jp/contests/joigsp2024/tasks/joigsp2024_e"}
typical90-i = { alias = "typical90_i", problem = "https://atcoder.jp/contests/typical90/tasks/typical90_i"}
abc429-f = { alias = "abc429_f", problem = "https://atcoder.jp/contests/abc429/tasks/abc429_f"}
abc415-f = { alias = "abc415_f", problem = "https://atcoder.jp/contests/abc415/tasks/abc415_f"}
abc408-f = { alias = "abc408_f", problem = "https://atcoder.jp/contests/abc408/tasks/abc408_f"}
abc389-f = { alias = "abc389_f", problem = "https://atcoder.jp/contests/abc389/tasks/abc389_f"}
joi2024ho-b = { alias = "joi2024ho_b", problem = "https://atcoder.jp/contests/joi2024ho/tasks/joi2024ho_b"}
abc368-g = { alias = "abc368_g", problem = "https://atcoder.jp/contests/abc368/tasks/abc368_g"}
abc254-f = { alias = "abc254_f", problem = "https://atcoder.jp/contests/abc254/tasks/abc254_f"}
abc223-f = { alias = "abc223_f", problem = "https://atcoder.jp/contests/abc223/tasks/abc223_f"}
joi2024-yo2-c = { alias = "joi2024_yo2_c", problem = "https://atcoder.jp/contests/joi2024yo2/tasks/joi2024_yo2_c"}
abc186-f = { alias = "abc186_f", problem = "https://atcoder.jp/contests/abc186/tasks/abc186_f"}
jsc2021-f = { alias = "jsc2021_f", problem = "https://atcoder.jp/contests/jsc2021/tasks/jsc2021_f"}
tessoku-book-fq = { alias = "tessoku_book_fq", problem = "https://atcoder.jp/contests/tessoku-book/tasks/tessoku_book_fq"}
joigsp2023-a = { alias = "joigsp2023_a", problem = "https://atcoder.jp/contests/joigsp2023/tasks/joigsp2023_a"}
joi2023ho-b = { alias = "joi2023ho_b", problem = "https://atcoder.jp/contests/joi2023ho/tasks/joi2023ho_b"}
joi2023-yo2-c = { alias = "joi2023_yo2_c", problem = "https://atcoder.jp/contests/joi2023yo2/tasks/joi2023_yo2_c"}
joigsc2022-e = { alias = "joigsc2022_e", problem = "https://atcoder.jp/contests/joigsc2022/tasks/joigsc2022_e"}
abc326-c = { alias = "abc326_c", problem = "https://atcoder.jp/contests/abc326/tasks/abc326_c"}
abc038-c = { alias = "abc038_c", problem = "https://atcoder.jp/contests/abc038/tasks/abc038_c"}

[[bin]]
name = "joi2008yo-e"
path = "src/bin/joi2008yo_e.rs"

[[bin]]
name = "joi2008ho-c"
path = "src/bin/joi2008ho_c.rs"

[[bin]]
name = "joigsp2025-e"
path = "src/bin/joigsp2025_e.rs"

[[bin]]
name = "joi2025ho-a"
path = "src/bin/joi2025ho_a.rs"

[[bin]]
name = "joig2025-c"
path = "src/bin/joig2025_c.rs"

[[bin]]
name = "joig2025-b"
path = "src/bin/joig2025_b.rs"

[[bin]]
name = "joi2025-yo2-b"
path = "src/bin/joi2025_yo2_b.rs"

[[bin]]
name = "joigsp2024-a"
path = "src/bin/joigsp2024_a.rs"

[[bin]]
name = "joi2024ho-a"
path = "src/bin/joi2024ho_a.rs"

[[bin]]
name = "joig2024-d"
path = "src/bin/joig2024_d.rs"

[[bin]]
name = "joig2024-c"
path = "src/bin/joig2024_c.rs"

[[bin]]
name = "joi2024-yo2-b"
path = "src/bin/joi2024_yo2_b.rs"

[[bin]]
name = "joi2023ho-a"
path = "src/bin/joi2023ho_a.rs"

[[bin]]
name = "joig2023-d"
path = "src/bin/joig2023_d.rs"

[[bin]]
name = "joigsc2022-a"
path = "src/bin/joigsc2022_a.rs"

[[bin]]
name = "joig2021-d"
path = "src/bin/joig2021_d.rs"

[[bin]]
name = "joi2020ho-b"
path = "src/bin/joi2020ho_b.rs"

[[bin]]
name = "joi2020ho-a"
path = "src/bin/joi2020ho_a.rs"

[[bin]]
name = "joi2019-yo-d"
path = "src/bin/joi2019_yo_d.rs"

[[bin]]
name = "joi2017ho-a"
path = "src/bin/joi2017ho_a.rs"

[[bin]]
name = "joi2016ho-b"
path = "src/bin/joi2016ho_b.rs"

[[bin]]
name = "joi2016ho-a"
path = "src/bin/joi2016ho_a.rs"

[[bin]]
name = "joi2016yo-d"
path = "src/bin/joi2016yo_d.rs"

[[bin]]
name = "joisc2014-h"
path = "src/bin/joisc2014_h.rs"

[[bin]]
name = "joi2014yo-d"
path = "src/bin/joi2014yo_d.rs"

[[bin]]
name = "joisc2007-anagra"
path = "src/bin/joisc2007_anagra.rs"

[[bin]]
name = "joisc2008-nile"
path = "src/bin/joisc2008_nile.rs"

[[bin]]
name = "joisc2008-origami"
path = "src/bin/joisc2008_origami.rs"

[[bin]]
name = "joi2009yo-c"
path = "src/bin/joi2009yo_c.rs"

[[bin]]
name = "joi2009ho-b"
path = "src/bin/joi2009ho_b.rs"

[[bin]]
name = "joi2010yo-e"
path = "src/bin/joi2010yo_e.rs"

[[bin]]
name = "joi2010ho-c"
path = "src/bin/joi2010ho_c.rs"

[[bin]]
name = "joisc2010-stairs"
path = "src/bin/joisc2010_stairs.rs"

[[bin]]
name = "joisc2011-banner"
path = "src/bin/joisc2011_banner.rs"

[[bin]]
name = "joisc2011-ioi"
path = "src/bin/joisc2011_ioi.rs"

[[bin]]
name = "joi2012yo-e"
path = "src/bin/joi2012yo_e.rs"

[[bin]]
name = "joisc2013-joi-poster"
path = "src/bin/joisc2013_joi_poster.rs"

[[bin]]
name = "joi2026-yo2-e"
path = "src/bin/joi2026_yo2_e.rs"

[[bin]]
name = "joi2026-yo2-d"
path = "src/bin/joi2026_yo2_d.rs"

[[bin]]
name = "joigsp2025-i"
path = "src/bin/joigsp2025_i.rs"

[[bin]]
name = "joigsp2025-f"
path = "src/bin/joigsp2025_f.rs"

[[bin]]
name = "joig2025-a"
path = "src/bin/joig2025_a.rs"

[[bin]]
name = "abc385-c"
path = "src/bin/abc385_c.rs"

[[bin]]
name = "abc149-d"
path = "src/bin/abc149_d.rs"

[[bin]]
name = "abc105-d"
path = "src/bin/abc105_d.rs"

[[bin]]
name = "abc367-d"
path = "src/bin/abc367_d.rs"

[[bin]]
name = "joi2025ho-b"
path = "src/bin/joi2025ho_b.rs"

[[bin]]
name = "abc403-d"
path = "src/bin/abc403_d.rs"

[[bin]]
name = "abc164-d"
path = "src/bin/abc164_d.rs"

[[bin]]
name = "abc089-d"
path = "src/bin/abc089_d.rs"

[[bin]]
name = "abc419-e"
path = "src/bin/abc419_e.rs"

[[bin]]
name = "abc378-e"
path = "src/bin/abc378_e.rs"

[[bin]]
name = "abc158-e"
path = "src/bin/abc158_e.rs"

[[bin]]
name = "abc288-d"
path = "src/bin/abc288_d.rs"

[[bin]]
name = "joi2025-yo2-c"
path = "src/bin/joi2025_yo2_c.rs"

[[bin]]
name = "tessoku-book-bf"
path = "src/bin/tessoku_book_bf.rs"

[[bin]]
name = "tessoku-book-bg"
path = "src/bin/tessoku_book_bg.rs"

[[bin]]
name = "abc185-f"
path = "src/bin/abc185_f.rs"

[[bin]]
name = "typical90-ak"
path = "src/bin/typical90_ak.rs"

[[bin]]
name = "tessoku-book-ee"
path = "src/bin/tessoku_book_ee.rs"

[[bin]]
name = "abc441-e"
path = "src/bin/abc441_e.rs"

[[bin]]
name = "abc437-f"
path = "src/bin/abc437_f.rs"

[[bin]]
name = "abc436-f"
path = "src/bin/abc436_f.rs"

[[bin]]
name = "abc432-e"
path = "src/bin/abc432_e.rs"

[[bin]]
name = "abc339-e"
path = "src/bin/abc339_e.rs"

[[bin]]
name = "abc351-f"
path = "src/bin/abc351_f.rs"

[[bin]]
name = "abc343-f"
path = "src/bin/abc343_f.rs"

[[bin]]
name = "abc341-e"
path = "src/bin/abc341_e.rs"

[[bin]]
name = "abc231-f"
path = "src/bin/abc231_f.rs"

[[bin]]
name = "abc221-e"
path = "src/bin/abc221_e.rs"

[[bin]]
name = "tessoku-book-ef"
path = "src/bin/tessoku_book_ef.rs"

[[bin]]
name = "abl-d"
path = "src/bin/abl_d.rs"

[[bin]]
name = "practice2-j"
path = "src/bin/practice2_j.rs"

[[bin]]
name = "joigsp2024-e"
path = "src/bin/joigsp2024_e.rs"

[[bin]]
name = "typical90-i"
path = "src/bin/typical90_i.rs"

[[bin]]
name = "abc429-f"
path = "src/bin/abc429_f.rs"

[[bin]]
name = "abc415-f"
path = "src/bin/abc415_f.rs"

[[bin]]
name = "abc408-f"
path = "src/bin/abc408_f.rs"

[[bin]]
name = "abc389-f"
path = "src/bin/abc389_f.rs"

[[bin]]
name = "joi2024ho-b"
path = "src/bin/joi2024ho_b.rs"

[[bin]]
name = "abc368-g"
path = "src/bin/abc368_g.rs"

[[bin]]
name = "abc254-f"
path = "src/bin/abc254_f.rs"

[[bin]]
name = "abc223-f"
path = "src/bin/abc223_f.rs"

[[bin]]
name = "joi2024-yo2-c"
path = "src/bin/joi2024_yo2_c.rs"

[[bin]]
name = "abc186-f"
path = "src/bin/abc186_f.rs"

[[bin]]
name = "jsc2021-f"
path = "src/bin/jsc2021_f.rs"

[[bin]]
name = "tessoku-book-fq"
path = "src/bin/tessoku_book_fq.rs"

[[bin]]
name = "joigsp2023-a"
path = "src/bin/joigsp2023_a.rs"

[[bin]]
name = "joi2023ho-b"
path = "src/bin/joi2023ho_b.rs"

[[bin]]
name = "joi2023-yo2-c"
path = "src/bin/joi2023_yo2_c.rs"

[[bin]]
name = "joigsc2022-e"
path = "src/bin/joigsc2022_e.rs"

[[bin]]
name = "abc326-c"
path = "src/bin/abc326_c.rs"

[[bin]]
name = "abc038-c"
path = "src/bin/abc038_c.rs"

[dependencies]
rpds = "=1.1.1"
rand_xorshift = "=0.4.0"
rand_xoshiro = "=0.7.0"
statrs = "=0.18.0"
primal = "=0.3.3"
thiserror = "=2.0.16"
ac-library-rs = "=0.2.0"
once_cell = "=1.21.3"
static_assertions = "=1.1.0"
varisat = "=0.2.2"
memoise = "=0.3.2"
argio = "=0.2.0"
bitvec = "=1.0.1"
counter = "=0.7.0"
hashbag = "=0.1.12"
pathfinding = "=4.14.0"
recur-fn = "=2.2.0"
indexing = { version = "=0.4.1", features = ["experimental_pointer_ranges"] }
amplify = { version = "=4.9.0", features = [
    "c_raw",
    "rand",
    "stringly_conversions",
] }
amplify_derive = "=4.0.1"
amplify_num = { version = "=0.5.3", features = ["std"] }
easy-ext = "=1.0.2"
multimap = "=0.10.1"
btreemultimap = "=0.1.1"
bstr = "=1.12.0"
az = "=1.2.1"
glidesort = "=0.1.2"
tap = "=1.0.1"
omniswap = "=0.1.0"
multiversion = "=0.8.0"
num = "=0.4.3"
num-bigint = "=0.4.6"
num-complex = "=0.4.6"
num-integer = "=0.1.46"
num-iter = "=0.1.45"
num-rational = "=0.4.2"
num-traits = "=0.2.19"
num-derive = "=0.4.2"
ndarray = "=0.16.1"
nalgebra = "=0.34.0"
alga = "=0.9.3"
libm = "=0.2.15"
rand = "=0.9.2"
getrandom = "=0.3.3"
rand_chacha = "=0.9.0"
rand_core = "=0.9.3"
rand_hc = "=0.4.0"
rand_pcg = "=0.9.0"
rand_distr = "=0.5.1"
petgraph = "=0.8.2"
indexmap = "=2.11.0"
regex = "=1.11.2"
lazy_static = "=1.5.0"
ordered-float = "=5.0.0"
ascii = "=1.1.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.14.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.15.0"
im-rc = "=15.1.0"
fixedbitset = "=0.5.7"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.5.0", features = ["derive"] }
text_io = "=0.1.13"
rustc-hash = "=2.1.1"
smallvec = { version = "=1.15.1", features = [
    "const_generics",
    "const_new",
    "write",
    "union",
    "serde",
    "arbitrary",
] }

[dev-dependencies]
