[package]
name = "problems"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
abc255-d = { alias = "abc255_d", problem = "https://atcoder.jp/contests/abc255/tasks/abc255_d"}
abc136-d = { alias = "abc136_d", problem = "https://atcoder.jp/contests/abc136/tasks/abc136_d"}
abc213-c = { alias = "abc213_c", problem = "https://atcoder.jp/contests/abc213/tasks/abc213_c"}
abc186-d = { alias = "abc186_d", problem = "https://atcoder.jp/contests/abc186/tasks/abc186_d"}
abc180-d = { alias = "abc180_d", problem = "https://atcoder.jp/contests/abc180/tasks/abc180_d"}
abc229-d = { alias = "abc229_d", problem = "https://atcoder.jp/contests/abc229/tasks/abc229_d"}
abc146-c = { alias = "abc146_c", problem = "https://atcoder.jp/contests/abc146/tasks/abc146_c"}
jsc2021-d = { alias = "jsc2021_d", problem = "https://atcoder.jp/contests/jsc2021/tasks/jsc2021_d"}
abc264-c = { alias = "abc264_c", problem = "https://atcoder.jp/contests/abc264/tasks/abc264_c"}
abc211-d = { alias = "abc211_d", problem = "https://atcoder.jp/contests/abc211/tasks/abc211_d"}
abc215-d = { alias = "abc215_d", problem = "https://atcoder.jp/contests/abc215/tasks/abc215_d"}
abc169-d = { alias = "abc169_d", problem = "https://atcoder.jp/contests/abc169/tasks/abc169_d"}
abc162-d = { alias = "abc162_d", problem = "https://atcoder.jp/contests/abc162/tasks/abc162_d"}
abc177-d = { alias = "abc177_d", problem = "https://atcoder.jp/contests/abc177/tasks/abc177_d"}
abc276-e = { alias = "abc276_e", problem = "https://atcoder.jp/contests/abc276/tasks/abc276_e"}
abc191-c = { alias = "abc191_c", problem = "https://atcoder.jp/contests/abc191/tasks/abc191_c"}
abc216-d = { alias = "abc216_d", problem = "https://atcoder.jp/contests/abc216/tasks/abc216_d"}
abc225-d = { alias = "abc225_d", problem = "https://atcoder.jp/contests/abc225/tasks/abc225_d"}
abc279-d = { alias = "abc279_d", problem = "https://atcoder.jp/contests/abc279/tasks/abc279_d"}
abc167-d = { alias = "abc167_d", problem = "https://atcoder.jp/contests/abc167/tasks/abc167_d"}
abc201-c = { alias = "abc201_c", problem = "https://atcoder.jp/contests/abc201/tasks/abc201_c"}
abc189-d = { alias = "abc189_d", problem = "https://atcoder.jp/contests/abc189/tasks/abc189_d"}
abc287-d = { alias = "abc287_d", problem = "https://atcoder.jp/contests/abc287/tasks/abc287_d"}
abc129-c = { alias = "abc129_c", problem = "https://atcoder.jp/contests/abc129/tasks/abc129_c"}
abc290-d = { alias = "abc290_d", problem = "https://atcoder.jp/contests/abc290/tasks/abc290_d"}
abc294-e = { alias = "abc294_e", problem = "https://atcoder.jp/contests/abc294/tasks/abc294_e"}
abc217-d = { alias = "abc217_d", problem = "https://atcoder.jp/contests/abc217/tasks/abc217_d"}
abc190-c = { alias = "abc190_c", problem = "https://atcoder.jp/contests/abc190/tasks/abc190_c"}
abc303-d = { alias = "abc303_d", problem = "https://atcoder.jp/contests/abc303/tasks/abc303_d"}
abc168-d = { alias = "abc168_d", problem = "https://atcoder.jp/contests/abc168/tasks/abc168_d"}
abc272-d = { alias = "abc272_d", problem = "https://atcoder.jp/contests/abc272/tasks/abc272_d"}
abc128-c = { alias = "abc128_c", problem = "https://atcoder.jp/contests/abc128/tasks/abc128_c"}
abc193-d = { alias = "abc193_d", problem = "https://atcoder.jp/contests/abc193/tasks/abc193_d"}
abc271-c = { alias = "abc271_c", problem = "https://atcoder.jp/contests/abc271/tasks/abc271_c"}
abc266-d = { alias = "abc266_d", problem = "https://atcoder.jp/contests/abc266/tasks/abc266_d"}
abc130-d = { alias = "abc130_d", problem = "https://atcoder.jp/contests/abc130/tasks/abc130_d"}
abc235-d = { alias = "abc235_d", problem = "https://atcoder.jp/contests/abc235/tasks/abc235_d"}
abc157-c = { alias = "abc157_c", problem = "https://atcoder.jp/contests/abc157/tasks/abc157_c"}
abc132-d = { alias = "abc132_d", problem = "https://atcoder.jp/contests/abc132/tasks/abc132_d"}
abc280-d = { alias = "abc280_d", problem = "https://atcoder.jp/contests/abc280/tasks/abc280_d"}
abc206-d = { alias = "abc206_d", problem = "https://atcoder.jp/contests/abc206/tasks/abc206_d"}
abc222-d = { alias = "abc222_d", problem = "https://atcoder.jp/contests/abc222/tasks/abc222_d"}
abc271-d = { alias = "abc271_d", problem = "https://atcoder.jp/contests/abc271/tasks/abc271_d"}
abc178-d = { alias = "abc178_d", problem = "https://atcoder.jp/contests/abc178/tasks/abc178_d"}
abc160-d = { alias = "abc160_d", problem = "https://atcoder.jp/contests/abc160/tasks/abc160_d"}
abc127-d = { alias = "abc127_d", problem = "https://atcoder.jp/contests/abc127/tasks/abc127_d"}
abc314-e = { alias = "abc314_e", problem = "https://atcoder.jp/contests/abc314/tasks/abc314_e"}
abc314-f = { alias = "abc314_f", problem = "https://atcoder.jp/contests/abc314/tasks/abc314_f"}
abc234-e = { alias = "abc234_e", problem = "https://atcoder.jp/contests/abc234/tasks/abc234_e"}
abc221-d = { alias = "abc221_d", problem = "https://atcoder.jp/contests/abc221/tasks/abc221_d"}
abc138-d = { alias = "abc138_d", problem = "https://atcoder.jp/contests/abc138/tasks/abc138_d"}
abc174-c = { alias = "abc174_c", problem = "https://atcoder.jp/contests/abc174/tasks/abc174_c"}
abc134-d = { alias = "abc134_d", problem = "https://atcoder.jp/contests/abc134/tasks/abc134_d"}
abc230-d = { alias = "abc230_d", problem = "https://atcoder.jp/contests/abc230/tasks/abc230_d"}
abc172-c = { alias = "abc172_c", problem = "https://atcoder.jp/contests/abc172/tasks/abc172_c"}
abc188-d = { alias = "abc188_d", problem = "https://atcoder.jp/contests/abc188/tasks/abc188_d"}
abc295-d = { alias = "abc295_d", problem = "https://atcoder.jp/contests/abc295/tasks/abc295_d"}
abc195-d = { alias = "abc195_d", problem = "https://atcoder.jp/contests/abc195/tasks/abc195_d"}
abc133-d = { alias = "abc133_d", problem = "https://atcoder.jp/contests/abc133/tasks/abc133_d"}
abc230-e = { alias = "abc230_e", problem = "https://atcoder.jp/contests/abc230/tasks/abc230_e"}
abc172-d = { alias = "abc172_d", problem = "https://atcoder.jp/contests/abc172/tasks/abc172_d"}
abc209-d = { alias = "abc209_d", problem = "https://atcoder.jp/contests/abc209/tasks/abc209_d"}
abc233-c = { alias = "abc233_c", problem = "https://atcoder.jp/contests/abc233/tasks/abc233_c"}
abc202-d = { alias = "abc202_d", problem = "https://atcoder.jp/contests/abc202/tasks/abc202_d"}
abc233-e = { alias = "abc233_e", problem = "https://atcoder.jp/contests/abc233/tasks/abc233_e"}
abc163-d = { alias = "abc163_d", problem = "https://atcoder.jp/contests/abc163/tasks/abc163_d"}
abc147-c = { alias = "abc147_c", problem = "https://atcoder.jp/contests/abc147/tasks/abc147_c"}
abc151-d = { alias = "abc151_d", problem = "https://atcoder.jp/contests/abc151/tasks/abc151_d"}
abc171-d = { alias = "abc171_d", problem = "https://atcoder.jp/contests/abc171/tasks/abc171_d"}
abc217-e = { alias = "abc217_e", problem = "https://atcoder.jp/contests/abc217/tasks/abc217_e"}
abc302-e = { alias = "abc302_e", problem = "https://atcoder.jp/contests/abc302/tasks/abc302_e"}
abc161-d = { alias = "abc161_d", problem = "https://atcoder.jp/contests/abc161/tasks/abc161_d"}
abc218-e = { alias = "abc218_e", problem = "https://atcoder.jp/contests/abc218/tasks/abc218_e"}
abc145-d = { alias = "abc145_d", problem = "https://atcoder.jp/contests/abc145/tasks/abc145_d"}
abc156-d = { alias = "abc156_d", problem = "https://atcoder.jp/contests/abc156/tasks/abc156_d"}
abc218-c = { alias = "abc218_c", problem = "https://atcoder.jp/contests/abc218/tasks/abc218_c"}
abc229-e = { alias = "abc229_e", problem = "https://atcoder.jp/contests/abc229/tasks/abc229_e"}
abc153-e = { alias = "abc153_e", problem = "https://atcoder.jp/contests/abc153/tasks/abc153_e"}
abc302-a = { alias = "abc302_a", problem = "https://atcoder.jp/contests/abc302/tasks/abc302_a"}
abc197-c = { alias = "abc197_c", problem = "https://atcoder.jp/contests/abc197/tasks/abc197_c"}
abc269-e = { alias = "abc269_e", problem = "https://atcoder.jp/contests/abc269/tasks/abc269_e"}
abc199-c = { alias = "abc199_c", problem = "https://atcoder.jp/contests/abc199/tasks/abc199_c"}
abc170-d = { alias = "abc170_d", problem = "https://atcoder.jp/contests/abc170/tasks/abc170_d"}

[[bin]]
name = "abc255-d"
path = "./src/bin/abc255_d.rs"

[[bin]]
name = "abc136-d"
path = "src/bin/abc136_d.rs"

[[bin]]
name = "abc213-c"
path = "src/bin/abc213_c.rs"

[[bin]]
name = "abc186-d"
path = "src/bin/abc186_d.rs"

[[bin]]
name = "abc180-d"
path = "src/bin/abc180_d.rs"

[[bin]]
name = "abc229-d"
path = "src/bin/abc229_d.rs"

[[bin]]
name = "abc146-c"
path = "src/bin/abc146_c.rs"

[[bin]]
name = "jsc2021-d"
path = "src/bin/jsc2021_d.rs"

[[bin]]
name = "abc264-c"
path = "src/bin/abc264_c.rs"

[[bin]]
name = "abc211-d"
path = "src/bin/abc211_d.rs"

[[bin]]
name = "abc215-d"
path = "src/bin/abc215_d.rs"

[[bin]]
name = "abc169-d"
path = "src/bin/abc169_d.rs"

[[bin]]
name = "abc162-d"
path = "src/bin/abc162_d.rs"

[[bin]]
name = "abc177-d"
path = "src/bin/abc177_d.rs"

[[bin]]
name = "abc276-e"
path = "src/bin/abc276_e.rs"

[[bin]]
name = "abc191-c"
path = "src/bin/abc191_c.rs"

[[bin]]
name = "abc216-d"
path = "src/bin/abc216_d.rs"

[[bin]]
name = "abc225-d"
path = "src/bin/abc225_d.rs"

[[bin]]
name = "abc279-d"
path = "src/bin/abc279_d.rs"

[[bin]]
name = "abc167-d"
path = "src/bin/abc167_d.rs"

[[bin]]
name = "abc201-c"
path = "src/bin/abc201_c.rs"

[[bin]]
name = "abc189-d"
path = "src/bin/abc189_d.rs"

[[bin]]
name = "abc287-d"
path = "src/bin/abc287_d.rs"

[[bin]]
name = "abc129-c"
path = "src/bin/abc129_c.rs"

[[bin]]
name = "abc290-d"
path = "src/bin/abc290_d.rs"

[[bin]]
name = "abc294-e"
path = "src/bin/abc294_e.rs"

[[bin]]
name = "abc217-d"
path = "src/bin/abc217_d.rs"

[[bin]]
name = "abc190-c"
path = "src/bin/abc190_c.rs"

[[bin]]
name = "abc303-d"
path = "src/bin/abc303_d.rs"

[[bin]]
name = "abc168-d"
path = "src/bin/abc168_d.rs"

[[bin]]
name = "abc272-d"
path = "src/bin/abc272_d.rs"

[[bin]]
name = "abc128-c"
path = "src/bin/abc128_c.rs"

[[bin]]
name = "abc193-d"
path = "src/bin/abc193_d.rs"

[[bin]]
name = "abc271-c"
path = "src/bin/abc271_c.rs"

[[bin]]
name = "abc266-d"
path = "src/bin/abc266_d.rs"

[[bin]]
name = "abc130-d"
path = "src/bin/abc130_d.rs"

[[bin]]
name = "abc235-d"
path = "src/bin/abc235_d.rs"

[[bin]]
name = "abc157-c"
path = "src/bin/abc157_c.rs"

[[bin]]
name = "abc132-d"
path = "src/bin/abc132_d.rs"

[[bin]]
name = "abc280-d"
path = "src/bin/abc280_d.rs"

[[bin]]
name = "abc206-d"
path = "src/bin/abc206_d.rs"

[[bin]]
name = "abc222-d"
path = "src/bin/abc222_d.rs"

[[bin]]
name = "abc271-d"
path = "src/bin/abc271_d.rs"

[[bin]]
name = "abc178-d"
path = "src/bin/abc178_d.rs"

[[bin]]
name = "abc160-d"
path = "src/bin/abc160_d.rs"

[[bin]]
name = "abc127-d"
path = "src/bin/abc127_d.rs"

[[bin]]
name = "abc314-e"
path = "src/bin/abc314_e.rs"

[[bin]]
name = "abc314-f"
path = "src/bin/abc314_f.rs"

[[bin]]
name = "abc234-e"
path = "src/bin/abc234_e.rs"

[[bin]]
name = "abc221-d"
path = "src/bin/abc221_d.rs"

[[bin]]
name = "abc138-d"
path = "src/bin/abc138_d.rs"

[[bin]]
name = "abc174-c"
path = "src/bin/abc174_c.rs"

[[bin]]
name = "abc134-d"
path = "src/bin/abc134_d.rs"

[[bin]]
name = "abc230-d"
path = "src/bin/abc230_d.rs"

[[bin]]
name = "abc172-c"
path = "src/bin/abc172_c.rs"

[[bin]]
name = "abc188-d"
path = "src/bin/abc188_d.rs"

[[bin]]
name = "abc295-d"
path = "src/bin/abc295_d.rs"

[[bin]]
name = "abc195-d"
path = "src/bin/abc195_d.rs"

[[bin]]
name = "abc133-d"
path = "src/bin/abc133_d.rs"

[[bin]]
name = "abc230-e"
path = "src/bin/abc230_e.rs"

[[bin]]
name = "abc172-d"
path = "src/bin/abc172_d.rs"

[[bin]]
name = "abc209-d"
path = "src/bin/abc209_d.rs"

[[bin]]
name = "abc233-c"
path = "src/bin/abc233_c.rs"

[[bin]]
name = "abc202-d"
path = "src/bin/abc202_d.rs"

[[bin]]
name = "abc233-e"
path = "src/bin/abc233_e.rs"

[[bin]]
name = "abc163-d"
path = "src/bin/abc163_d.rs"

[[bin]]
name = "abc147-c"
path = "src/bin/abc147_c.rs"

[[bin]]
name = "abc151-d"
path = "src/bin/abc151_d.rs"

[[bin]]
name = "abc171-d"
path = "src/bin/abc171_d.rs"

[[bin]]
name = "abc217-e"
path = "src/bin/abc217_e.rs"

[[bin]]
name = "abc302-e"
path = "src/bin/abc302_e.rs"

[[bin]]
name = "abc161-d"
path = "src/bin/abc161_d.rs"

[[bin]]
name = "abc218-e"
path = "src/bin/abc218_e.rs"

[[bin]]
name = "abc145-d"
path = "src/bin/abc145_d.rs"

[[bin]]
name = "abc156-d"
path = "src/bin/abc156_d.rs"

[[bin]]
name = "abc218-c"
path = "src/bin/abc218_c.rs"

[[bin]]
name = "abc229-e"
path = "src/bin/abc229_e.rs"

[[bin]]
name = "abc153-e"
path = "src/bin/abc153_e.rs"

[[bin]]
name = "abc302-a"
path = "src/bin/abc302_a.rs"

[[bin]]
name = "abc197-c"
path = "src/bin/abc197_c.rs"

[[bin]]
name = "abc269-e"
path = "src/bin/abc269_e.rs"

[[bin]]
name = "abc199-c"
path = "src/bin/abc199_c.rs"

[[bin]]
name = "abc170-d"
path = "src/bin/abc170_d.rs"

[dependencies]
ac-library-rs = "=0.1.1"
once_cell = "=1.18.0"
static_assertions = "=1.1.0"
varisat = "=0.2.2"
memoise = "=0.3.2"
argio = "=0.2.0"
bitvec = "=1.0.1"
counter = "=0.5.7"
hashbag = "=0.1.11"
pathfinding = "=4.3.0"
recur-fn = "=2.2.0"
indexing = "=0.4.1"
amplify = "=3.14.2"
amplify_derive = "=2.11.3"
amplify_num = "=0.4.1"
easy-ext = "=1.0.1"
multimap = "=0.9.0"
btreemultimap = "=0.1.1"
bstr = "=1.6.0"
az = "=1.2.1"
glidesort = "=0.1.2"
tap = "=1.0.1"
omniswap = "=0.1.0"
multiversion = "=0.7.2"
num = "=0.4.1"
num-bigint = "=0.4.3"
num-complex = "=0.4.3"
num-integer = "=0.1.45"
num-iter = "=0.1.43"
num-rational = "=0.4.1"
num-traits = "=0.2.15"
num-derive = "=0.4.0"
ndarray = "=0.15.6"
nalgebra = "=0.32.3"
alga = "=0.9.3"
libm = "=0.2.7"
rand = "=0.8.5"
getrandom = "=0.2.10"
rand_chacha = "=0.3.1"
rand_core = "=0.6.4"
rand_hc = "=0.3.2"
rand_pcg = "=0.3.1"
rand_distr = "=0.4.3"
petgraph = "=0.6.3"
indexmap = "=2.0.0"
regex = "=1.9.1"
lazy_static = "=1.4.0"
ordered-float = "=3.7.0"
ascii = "=1.1.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.11.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.8.1"
im-rc = "=15.1.0"
fixedbitset = "=0.4.2"
bitset-fixed = "=0.1.0"
proconio = "=0.4.5"
text_io = "=0.1.12"
rustc-hash = "=1.1.0"
smallvec = "=1.11.0"

[dev-dependencies]
